--- a/src/components/seguros-de-viaje/hero.astro
+++ b/src/components/seguros-de-viaje/hero.astro
@@ -1,6 +1,6 @@
-<main class="relative grid min-h-96 place-items-center lg:min-h-dvh">
+<main class="relative grid min-h-[60dvh] place-items-center lg:min-h-dvh">
   <div
-    class="absolute -z-1 h-96 w-full after:absolute after:inset-0 after:z-10 after:bg-black/65 lg:h-dvh"
+    class="absolute -z-1 h-[60dvh] w-full after:absolute after:inset-0 after:z-10 after:bg-black/65 lg:h-dvh"
   >
     <img
       src="/images/seguros-de-viaje-hero.avif"
