--- a/src/components/seguros-de-viaje/insurance.astro
+++ b/src/components/seguros-de-viaje/insurance.astro
@@ -33,7 +33,7 @@ const seguros = [
 ---
 
 <section
-  class="relative z-10 -mt-[100vh] rounded-t-[5rem] bg-black pt-20 lg:py-50"
+  class="relative z-10 -mt-[100vh] rounded-t-4xl lg:rounded-t-[5rem] xl:rounded-t-[7rem] bg-black py-20 lg:py-50"
 >
   <div class="container mx-auto px-4">
     <h2 class="mb-20 text-center text-4xl font-bold text-white md:text-6xl">
