style(components): format with linter

--- a/src/components/seguros-de-viaje/countries.astro
+++ b/src/components/seguros-de-viaje/countries.astro
@@ -1,7 +1,7 @@
 <section
   class="section-1 relative z-0 container mx-auto flex flex-col items-center justify-center gap-10 pt-28 pb-16 lg:min-h-dvh"
 >
-  <p class="text-heading-2 first-text text-center animate-slide-up-fade">
+  <p class="text-heading-2 first-text animate-slide-up-fade text-center">
     Tenemos el seguro médico internacional que necesitas para cumplir con los
     requisitos de tu visa de estudiante o turista, ya sea que viajes a:
   </p>
@@ -165,9 +165,9 @@
 
     // If is the last, add more space to the pin
     if (index === secureItems.length - 1) {
-      if(isMobile) {
+      if (isMobile) {
         masterTl.to({}, { duration: 7 });
-      }else {
+      } else {
         masterTl.to({}, { duration: 18 });
       }
     }
