refactor(components): update styles

--- a/src/components/seguros-de-viaje/countries.astro
+++ b/src/components/seguros-de-viaje/countries.astro
@@ -1,41 +1,49 @@
 <section
-  class="section-1 relative z-0 container mx-auto flex flex-col items-center justify-center gap-10 pt-28 pb-16 lg:min-h-dvh"
+  class="section-1 relative z-0 flex flex-col items-center justify-center gap-10 pt-28 pb-16 lg:min-h-dvh"
 >
-  <p class="text-heading-2 first-text animate-slide-up-fade text-center">
-    Tenemos el seguro médico internacional que necesitas para cumplir con los
-    requisitos de tu visa de estudiante o turista, ya sea que viajes a:
-  </p>
+  <div class="container mx-auto">
+    <p class="text-heading-2 first-text animate-slide-up-fade text-center">
+      Tenemos el seguro médico internacional que necesitas para cumplir con los
+      requisitos de tu visa de estudiante o turista, ya sea que viajes a:
+    </p>
 
-  <div
-    class="selector-container relative mx-auto w-full space-y-6 lg:space-y-12"
-  >
-    <ul
-      class="selector text-heading-2 relative min-h-12 overflow-hidden text-center lg:min-h-24"
+    <div
+      class="selector-container relative mx-auto w-full flex flex-col lg:gap-y-12"
     >
-      <li class="li-item absolute top-0 left-0 w-full opacity-0">
-        🇬🇧 Reino Unido
-      </li>
-      <li class="li-item absolute top-0 left-0 w-full opacity-0">
-        🇦🇺 Australia (OSHC)
-      </li>
-      <li class="li-item absolute top-0 left-0 w-full opacity-0">
-        🇳🇿 Nueva Zelanda
-      </li>
-      <li class="li-item absolute top-0 left-0 w-full opacity-0">🇪🇸 España</li>
-      <li class="li-item absolute top-0 left-0 w-full opacity-0">
-        ...o cualquier otro destino.
-      </li>
-    </ul>
+      <ul
+        class="selector text-heading-2 relative min-h-24 overflow-hidden text-center *:my-6"
+      >
+        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0 text-center">
+          <img src="https://flagcdn.com/40x30/gb.webp" alt="UK" class="mr-2 inline w-[32px] h-[24px] sm:w-[40px] sm:h-[30px]">
+          Reino Unido
+        </li>
+        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
+          <img src="https://flagcdn.com/40x30/au.webp" alt="AU" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+          Australia (OSHC)
+        </li>
+        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
+          <img src="https://flagcdn.com/40x30/nz.webp" alt="NZ" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+          Nueva Zelanda
+        </li>
+        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
+          <img src="https://flagcdn.com/40x30/es.webp" alt="ES" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+          España
+        </li>
+        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
+          ...o cualquier otro destino.
+        </li>
+      </ul>
 
-    <ul
-      class="insurance flex flex-col justify-center gap-6 text-lg lg:flex-row lg:*:text-2xl"
-    >
-      <li>✅ Seguro para estudiantes internacionales</li>
-      <li>✅ Seguro para turistas</li>
-      <li>
-        ✅ 100% online y aprobado por gobiernos e instituciones educativas
-      </li>
-    </ul>
+      <ul
+        class="insurance flex flex-col justify-center gap-6 text-lg lg:flex-row lg:*:text-2xl"
+      >
+        <li>✅ Seguro para estudiantes internacionales</li>
+        <li>✅ Seguro para turistas</li>
+        <li>
+          ✅ 100% online y aprobado por gobiernos e instituciones educativas
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
 
