refactor(components): format with linter

--- a/src/components/seguros-de-viaje/countries.astro
+++ b/src/components/seguros-de-viaje/countries.astro
@@ -8,28 +8,46 @@
     </p>
 
     <div
-      class="selector-container relative mx-auto w-full flex flex-col lg:gap-y-12"
+      class="selector-container relative mx-auto flex w-full flex-col lg:gap-y-12"
     >
       <ul
         class="selector text-heading-2 relative min-h-24 overflow-hidden text-center *:my-6"
       >
-        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0 text-center">
-          <img src="https://flagcdn.com/40x30/gb.webp" alt="UK" class="mr-2 inline w-[32px] h-[24px] sm:w-[40px] sm:h-[30px]">
+        <li
+          class="li-item absolute inset-x-0 top-0 w-full text-center opacity-0"
+        >
+          <img
+            src="https://flagcdn.com/40x30/gb.webp"
+            alt="UK"
+            class="mr-2 inline h-[24px] w-[32px] sm:h-[30px] sm:w-[40px]"
+          />
           Reino Unido
         </li>
-        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
-          <img src="https://flagcdn.com/40x30/au.webp" alt="AU" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+        <li class="li-item absolute inset-x-0 top-0 w-full opacity-0">
+          <img
+            src="https://flagcdn.com/40x30/au.webp"
+            alt="AU"
+            class="mr-2 inline h-[24px] w-[32px] sm:h-[30px] sm:w-[40px]"
+          />
           Australia (OSHC)
         </li>
-        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
-          <img src="https://flagcdn.com/40x30/nz.webp" alt="NZ" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+        <li class="li-item absolute inset-x-0 top-0 w-full opacity-0">
+          <img
+            src="https://flagcdn.com/40x30/nz.webp"
+            alt="NZ"
+            class="mr-2 inline h-[24px] w-[32px] sm:h-[30px] sm:w-[40px]"
+          />
           Nueva Zelanda
         </li>
-        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
-          <img src="https://flagcdn.com/40x30/es.webp" alt="ES" class="w-[32px] h-[24px] sm:w-[40px] sm:h-[30px] mr-2 inline">
+        <li class="li-item absolute inset-x-0 top-0 w-full opacity-0">
+          <img
+            src="https://flagcdn.com/40x30/es.webp"
+            alt="ES"
+            class="mr-2 inline h-[24px] w-[32px] sm:h-[30px] sm:w-[40px]"
+          />
           España
         </li>
-        <li class="li-item absolute top-0 inset-x-0 w-full opacity-0">
+        <li class="li-item absolute inset-x-0 top-0 w-full opacity-0">
           ...o cualquier otro destino.
         </li>
       </ul>
