refactor(hero): remove icons for headline

--- a/src/components/seguros-de-viaje/hero.astro
+++ b/src/components/seguros-de-viaje/hero.astro
@@ -15,7 +15,7 @@
     <h1
       class="text-heading-1 animate-slide-up-fade z-20 flex flex-col gap-1 leading-none font-black text-white"
     >
-      🌍✈️ Viaja tranquilo. Nosotros cuidamos de ti.
+      Viaja tranquilo. Nosotros cuidamos de ti.
     </h1>
 
     <p
