refactor(countries): re order check points and reduce font size en laptops

--- a/src/components/seguros-de-viaje/countries.astro
+++ b/src/components/seguros-de-viaje/countries.astro
@@ -53,13 +53,13 @@
       </ul>
 
       <ul
-        class="insurance flex flex-col justify-center gap-6 text-lg lg:flex-row lg:*:text-2xl"
+        class="insurance flex flex-col justify-center gap-6 text-lg lg:flex-row 2xl:*:text-2xl"
       >
         <li>✅ Seguro para estudiantes internacionales</li>
-        <li>✅ Seguro para turistas</li>
         <li>
           ✅ 100% online y aprobado por gobiernos e instituciones educativas
         </li>
+        <li>✅ Seguro para turistas</li>
       </ul>
     </div>
   </div>
