--- a/src/components/seguros-de-viaje/insurance.astro
+++ b/src/components/seguros-de-viaje/insurance.astro
@@ -59,7 +59,7 @@ const insurance = [
               <div class="absolute inset-0 -translate-x-full bg-gradient-to-r from-transparent via-white/5 to-transparent transition-transform duration-1000 group-hover:translate-x-full" />
 
               {/* Button simulated*/}
-              <div class="absolute bottom-2 left-2 flex w-fit items-center gap-2 rounded-full border border-black/20 bg-black/70 px-4 py-2 backdrop-blur-sm transition-all duration-300 group-hover:border-white/25 group-hover:bg-black/90 md:right-6 md:bottom-6">
+              <div class="absolute bottom-2 left-2 flex w-fit items-center gap-2 rounded-full border border-black/20 bg-black/70 px-4 py-2 backdrop-blur-sm transition-all duration-300 group-hover:border-white/25 group-hover:bg-black/90 md:bottom-6 md:left-6 lg:right-6 lg:left-auto">
                 <span class="text-sm font-medium text-white">
                   Cotizar seguro ahora
                 </span>
