fix: fix scroll to bottom animation and update section id

--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -43,8 +43,8 @@ import { Icon } from "astro-icon/components";
 
   <a
     role="button"
-    href="#scroll-bottom"
-    class="absolute inset-x-0 bottom-0 z-10 mx-auto hidden w-fit animate-bounce lg:block"
+    href="#programas"
+    class="animate-bouncing animate-iteration-count-infinite absolute inset-x-0 bottom-0 z-10 mx-auto hidden w-fit lg:block"
     aria-label="Scroll down"
   >
     <Icon name="mouse" class="size-6 text-white lg:size-10" />
