--- a/src/components/home/testimonials.astro
+++ b/src/components/home/testimonials.astro
@@ -119,7 +119,7 @@ const TESTIMONIALS: Testimonials[] = [
           const randomColor = getRandomColor();
 
           return (
-            <div class="swiper-slide min-h-full space-y-2 overflow-hidden rounded-2xl border border-black/10 bg-white px-4 py-6 shadow">
+            <div class="swiper-slide min-h-full space-y-2 overflow-hidden border border-black/10 bg-white px-4 py-6 shadow">
               <header class="flex items-start justify-between">
                 <div class="flex flex-col gap-2">
                   <div class="flex items-center gap-2">
