feat(page): add idiomas page

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -15,7 +15,7 @@ import { Icon } from "astro-icon/components";
 
   <div class="mt-25 grid gap-4 sm:grid-cols-2 lg:grid-cols-3 lg:grid-rows-3">
     <a
-      href="#"
+      href="/idiomas"
       class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:row-span-2"
     >
       <img
