--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -9,7 +9,10 @@ import Pricing from "@/components/higher-education/pricing.astro";
 import Contact from "@/components/higher-education/contact.svelte";
 ---
 
-<Layout title="Higher Education - WeAreTop">
+<Layout
+  title="Higher Education - WeAreTop"
+  description="Explore our higher education programs abroad. Gain international experience and advance your career with WeAreTop."
+>
   <Hero />
   <ScrollDrivenAnimation />
   <CountDown />
