--- a/src/pages/seguros-de-viaje.astro
+++ b/src/pages/seguros-de-viaje.astro
@@ -5,7 +5,10 @@ import Countries from "@/components/seguros-de-viaje/countries.astro";
 import Insurance from "@/components/seguros-de-viaje/insurance.astro";
 ---
 
-<Layout title="Seguros de viaje - WeAreTop">
+<Layout
+  title="Seguros de viaje - WeAreTop"
+  description="Protege tu viaje con nuestros seguros de viaje. Ofrecemos cobertura completa para que puedas viajar con tranquilidad con WeAreTop."
+>
   <Hero />
   <Countries />
   <Insurance />
