--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,4 +1,31 @@
+---
+interface Props {
+  title: string;
+  description: string;
+  ogUrl: string;
+}
+
+const { title, description, ogUrl } = Astro.props;
+---
+
 <link rel="icon" href="/images/32x32.png" sizes="32x32" />
 <meta name="author" content="Cristhian Melo" />
 <meta name="creator" content="rxtsel" />
 <meta name="website" content="https://rxtsel.dev" />
+
+<meta name="title" content={title} />
+<meta name="description" content={description} />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(ogUrl, Astro.url)} />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(ogUrl, Astro.url)} />
