--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,9 +14,15 @@ import "../styles/global.css";
 
 interface Props {
   title: string;
+  description?: string;
+  ogUrl?: string;
 }
 
-const { title } = Astro.props;
+const {
+  title,
+  description = "No somos una agencia. Ofrecemos consultoría en educación internacional. Cada año, nuestros estudiantes viven la mejor experiencia de sus vidas, en escuelas de idiomas con el mejor mix de nacionalidades, Summer Camps, Universidades TOP 100 QS, Russell group, escuelas de negocios y colegios alrededor del mundo.",
+  ogUrl = "/images/og.png",
+} = Astro.props;
 ---
 
 <!doctype html>
@@ -25,7 +31,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{title}</title>
-    <Head />
+    <Head title={title} description={description} ogUrl={ogUrl} />
   </head>
   <body class="overflow-x-hidden">
     <BodyMetaTags />
