fix(destinations): add urls

--- a/src/components/idiomas/destinations.astro
+++ b/src/components/idiomas/destinations.astro
@@ -3,55 +3,55 @@ const LIST = {
   english: [
     {
       label: "Australia",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/australia/",
+      external: true,
     },
     {
       label: "New Zealand",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/newzealand/",
+      external: true,
     },
     {
       label: "United Kingdom",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/reinounido/",
+      external: true,
     },
     {
-      label: "Canada",
-      url: "#",
-      external: false,
+      label: "Canadá",
+      url: "https://content.wearetop.co/canada/",
+      external: true,
     },
     {
       label: "Dubai",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/emiratos-arabes-unidos/dubai/",
+      external: true,
     },
     {
       label: "Malta",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/malta/",
+      external: true,
     },
     {
       label: "Ireland",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/irlanda/",
+      external: true,
     },
     {
       label: "South Africa",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/southafrica/",
+      external: true,
     },
     {
       label: "India",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/india/",
+      external: true,
     },
   ],
   french: [
     {
       label: "Francia",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/francia",
+      external: true,
     },
     {
       label: "Suiza",
@@ -60,34 +60,34 @@ const LIST = {
     },
     {
       label: "Canada",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/canada/",
+      external: true,
     },
   ],
   germany: [
     {
       label: "Alemania",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/alemania",
+      external: true,
     },
   ],
   portugal: [
     {
       label: "Brasil",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/brasil",
+      external: true,
     },
     {
       label: "Portugal",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/portugal",
+      external: true,
     },
   ],
   italian: [
     {
       label: "Italia",
-      url: "#",
-      external: false,
+      url: "https://content.wearetop.co/italia",
+      external: true,
     },
   ],
 };
