refactor(ui): remove empty url and move position of hero image

--- a/src/components/idiomas/hero.astro
+++ b/src/components/idiomas/hero.astro
@@ -9,7 +9,7 @@ import { Icon } from "astro-icon/components";
     <source srcset="/images/idiomas/hero.webp" type="image/webp" />
     <source srcset="/images/idiomas/hero.avif" type="image/avif" />
     <img
-      class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
+      class="absolute inset-0 mx-auto h-screen w-full object-cover object-top"
       src="/images/idiomas/hero.webp"
     />
   </picture>
