feat(pages): add univerity page and update styles

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon/components";
     </a>
 
     <a
-      href="/higher-education"
+      href="/universidades"
       class="group show-animation relative overflow-hidden rounded-3xl shadow-xs"
     >
       <img
