--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="dotted-overlay flex min-h-screen flex-col justify-center bg-black after:absolute after:inset-0"
+  class="dotted-overlay relative flex min-h-screen flex-col justify-center overflow-hidden bg-black after:absolute after:inset-0"
 >
   <video
     class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
