--- a/src/components/home/testimonials.astro
+++ b/src/components/home/testimonials.astro
@@ -155,6 +155,8 @@ const TESTIMONIALS: Testimonials[] = [
                   title="Ver en google"
                   target="_blank"
                   rel="noopener noreferrer"
+                  aria-hidden="true"
+                  aria-label="Ver en google"
                 >
                   <Icon name="logos/google" class="size-8" />
                 </a>
