refactor(footer): add utm tags

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -71,7 +71,7 @@ import { ROUTES } from "@/lib/constants";
       >
         © 2024 WeAreTop. All rights reserved. <span class="block lg:inline"
           >Powered by <a
-            href="https://rxtsel.dev"
+            href="https://rxtsel.dev/?utm_source=wearetop&utm_medium=footer"
             class="transition-colors hover:text-white"
             target="_blank">@rxtsel.</a
           ></span
