refactor(ui): update text styles

--- a/src/components/universidades/scroll-driven-animation.astro
+++ b/src/components/universidades/scroll-driven-animation.astro
@@ -5,14 +5,14 @@
       class="sticky top-0 z-10 flex h-screen flex-col items-center justify-center"
     >
       <h2
-        class="mx-auto text-center text-5xl leading-none font-black text-balance opacity-15 lg:text-6xl xl:text-7xl 2xl:text-9xl"
+        class="mx-auto text-center text-4xl leading-none font-black text-balance opacity-15 lg:text-6xl xl:text-7xl 2xl:text-9xl"
         id="headline"
       >
         Mejora tu perfil profesional y conecta con universidades TOP.
       </h2>
       <p
         id="description"
-        class="text-heading-1 text-cpurple-300 mx-auto mt-10 text-center leading-none font-normal opacity-25 md:container"
+        class="text-heading-2 text-cpurple-300 mx-auto mt-10 px-2 text-center leading-tight font-normal opacity-25 sm:px-0 md:container"
       >
         Ya sea que busques impulsar tu carrera en <strong class="font-black"
           >STEM</strong
