--- a/src/components/universidades/universities.astro
+++ b/src/components/universidades/universities.astro
@@ -50,7 +50,7 @@ const UNIVERSITIES = [
     website: "https://www.csvpa.com/",
     external: true,
     description:
-      "Educación, excelencia e innovación en el corazón de Cambridge.\n\nCambridge School of Visual & Performing Arts (CSVPA) es una reconocida escuela de arte, diseño y artes escénicas con campus en Cambridge y Londres. Ofrece programas de Foundation, Diploma, pregrado y posgrado en Arte y Diseño, Moda, Música y Artes Escénicas, combinando creatividad, práctica profesional y excelencia académica.",
+      "CSVPA es una reconocida escuela de arte, diseño y artes escénicas con campus en Cambridge y Londres. Ofrece programas de Foundation, Diploma, pregrado y posgrado en Arte y Diseño, Moda, Música y Artes Escénicas, combinando creatividad, práctica profesional y excelencia académica.",
   },
 ];
 ---
