--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -129,7 +129,7 @@ import { Icon } from "astro-icon/components";
     </a>
 
     <a
-      href="#"
+      href="/boarding-schools-internacionales"
       class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:row-start-3"
     >
       <img
