fix(ui): fix small changes in ui

--- a/src/components/boarding-school-internationals/hero.astro
+++ b/src/components/boarding-school-internationals/hero.astro
@@ -26,7 +26,7 @@ import { Icon } from "astro-icon/components";
       class="flex flex-col items-center justify-center space-y-4 text-center"
     >
       <h1
-        class="animate-blurred-fade-in text-shadow-lg gap-1 text-4xl leading-none font-black text-pretty text-white md:text-6xl lg:text-balance xl:text-8xl"
+        class="animate-blurred-fade-in text-shadow-lg text-heading-1 gap-1 leading-none font-black text-pretty text-white"
       >
         Estudia en los mejores <span class="text-cteal-100"
           >Boarding Schools</span
