--- a/src/components/boarding-school-internationals/scroll-driven-animation.astro
+++ b/src/components/boarding-school-internationals/scroll-driven-animation.astro
@@ -1,13 +1,13 @@
 <div class="min-h-[300vh] bg-black text-white">
-  <div class="relative">
+  <div class="relative container mx-auto">
     <section
       id="sticky-section"
-      class="sticky top-0 z-10 container flex h-screen flex-col items-center justify-center"
+      class="sticky top-0 z-10 flex h-screen flex-col items-center justify-center"
     >
       <h2
         class:list={[
           "mx-auto text-center font-black text-pretty opacity-15",
-          "text-3xl md:text-6xl xl:text-8xl",
+          "text-3xl md:text-6xl 2xl:text-8xl",
         ]}
         id="headline"
       >
