--- a/src/components/boarding-school-internationals/schools.astro
+++ b/src/components/boarding-school-internationals/schools.astro
@@ -86,23 +86,23 @@ const SCHOOLS = [
               <Image
                 src="/images/logos/bosworth.png"
                 alt="Bosworth Independent School Logo"
-                height={10}
+                height={40}
                 width={200}
-                class="absolute top-2 left-2 z-10 h-8 w-auto sm:top-6 sm:left-6 sm:h-10"
+                class="absolute top-2 left-2 z-10 h-12 w-auto rounded-md bg-black p-2 sm:top-6 sm:left-6"
               />
             )}
 
             {s.id === "worthgate" && (
               <WorthgateLogo
                 height={40}
-                class="absolute top-2 left-2 z-10 h-8 text-white sm:top-6 sm:left-6 sm:h-10"
+                class="absolute top-2 left-2 z-10 h-12 rounded-md bg-white text-black sm:top-6 sm:left-6"
               />
             )}
 
             {s.id === "cats-cambridge" && (
               <CatsCambridgeLogo
                 height={40}
-                class="absolute top-2 left-2 z-10 h-8 text-black sm:top-6 sm:left-6 sm:h-10"
+                class="absolute top-2 left-2 z-10 h-12 rounded-md bg-white text-black sm:top-6 sm:left-6"
               />
             )}
 
@@ -112,7 +112,7 @@ const SCHOOLS = [
                 alt="CATS Boston Logo"
                 height={40}
                 width={40}
-                class="absolute top-2 left-2 z-10 h-8 w-auto brightness-100 grayscale-100 invert-100 sm:top-6 sm:left-6 sm:h-10"
+                class="absolute top-2 left-2 z-10 h-12 w-auto rounded-md bg-white p-1 sm:top-6 sm:left-6"
               />
             )}
 
